--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <section class="featured">
           <h2 class="featuredtitles">Featured Artwork</h2>
           <div class="imagenes">
-            <img src="/img/01 (1).svg">
-            <img src="/img/02.svg">
+            <img src="img/01 (1).svg">
+            <img src="img/02.svg">
           </div>
         </section>
 
